testsuite/tests/indexed-types/should_fail/SimpleFail4.stderr

SimpleFail4.hs:10:3: error:
    • Illegal argument ‘Int’ in:
        ‘type S2 Int = Char’
        The arguments to ‘S2’ must all be distinct type variables
    • In the default type instance declaration for ‘S2’
      In the class declaration for ‘C2’
